# ethcc_back

./: README.md  main.py  pyproject.toml
backend/: abi.py
backend/app/: main.py
